# otter

./: CMakeLists.txt  Dockerfile  DockerfileTest  README.md
include/: ArgumentOption.h  ArgumentParser.h  BoundaryHandler.h  Configurator.h  LocHandler.h  Reader.h  StatHandler.h  Structs_STXXL.h  TagHandler.h  Timer.h  Util.h
src/: ArgumentParser.cpp  BoundaryHandler.cpp  Configurator.cpp  LocHandler.cpp  Main.cpp  Reader.cpp  StatHandler.cpp  TagHandler.cpp
stxxl/: CMakeLists.txt
test/: ArgumentOptionTest.cpp  CMakeLists.txt  ConfiguratorTest.cpp  HandlerTest.cpp  TagHandlerTest.cpp  test.osm  test2.osm  test2.ttl
